--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -30,15 +30,16 @@
             android:gravity="center_vertical">
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="letterClicked"
-                app:letter="a"
                 app:led_color="blue"
-                />
+                app:letter="a" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,6 +48,7 @@
                 app:letter="b" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,6 +57,7 @@
                 app:letter="c" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_d"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -63,22 +66,25 @@
                 app:letter="d" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_e"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="e" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_f"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="f" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_g"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -87,11 +93,12 @@
                 app:letter="g" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_h"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="h" />
         </LinearLayout>
 
@@ -102,77 +109,86 @@
             android:gravity="center_vertical">
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_i"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:led_color="red"
                 android:layout_marginRight="25dp"
+                android:layout_weight="2"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="i" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_j"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="j" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_k"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="k" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_l"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="l" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="m" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_n"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="n" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_o"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="o" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_p"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="p" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_q"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:led_color="green"
-                android:onClick="letterClicked"
                 android:layout_marginLeft="25dp"
+                android:layout_weight="2"
+                android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="q" />
 
         </LinearLayout>
@@ -186,76 +202,85 @@
             android:gravity="center_vertical">
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_r"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="r" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_s"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="s" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_t"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="t" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_u"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="u" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_v"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="v" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_w"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="w" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="blue"
                 android:onClick="letterClicked"
+                app:led_color="blue"
                 app:letter="x" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_y"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:led_color="green"
                 android:onClick="letterClicked"
+                app:led_color="green"
                 app:letter="y" />
 
             <com.apps.esampaio.strangerthingsboard.activities.view.custom.WallLetter
+                android:id="@+id/letter_z"
                 android:layout_width="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_weight="1"
-                app:led_color="red"
                 android:onClick="letterClicked"
+                app:led_color="red"
                 app:letter="z" />
 
         </LinearLayout>
@@ -284,10 +309,10 @@
 
         <Button
             android:id="@+id/sendButton"
-            android:onClick="sendButtonClicked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:onClick="sendButtonClicked"
             android:text="send" />
     </RelativeLayout>
 
