--- a/android/app/src/main/res/layout/activity_splash.xml
+++ b/android/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,10 @@
     android:background="@android:color/black"
     tools:context="com.apps.esampaio.strangerthingsboard.activities.SplashActivity">
 
-    <com.medialablk.easygifview.EasyGifView
+
+    <com.whygraphics.gifview.gif.GIFView
         android:id="@+id/splash_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/splash" />
+        android:layout_height="match_parent" />
+
 </LinearLayout>
