--- a/android/app/src/main/res/layout/wall_letter.xml
+++ b/android/app/src/main/res/layout/wall_letter.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/led_image_view"
-        android:src="@drawable/led_off"
-        android:layout_marginBottom="5dp"
         android:layout_width="15dp"
-        android:layout_height="15dp" />
+        android:layout_height="15dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/led_off" />
 
     <ImageView
         android:id="@+id/letter_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="center"
         android:src="@drawable/letter_a"
         android:textAlignment="center" />
-
 </LinearLayout>
